# linuxstudy

./: .gitignore  sftp-config.json  test.cpp  website.txt  陈政权.docx
c++/c++primer/03/: 3_2.cpp  3_28.cpp  3_2_2.cpp  3_3.cpp  3_31.cpp  3_32_2.cpp  a.out  grade.cpp  string_toupper.cpp  test.cpp  vec_string.cpp
c++/c++primer/05/: a.out
c++/c++primer/06/: 6_25_book.cpp  6_30.cpp  6_33.cpp  a.out
c++/c++primer/07/: 07.pro  7_1.cpp  person.cpp  sales_data.h
c++/c++primer/08/: 08.pro  a.out  ex8_01.cpp
c++/c++primer/09/: 09.pro  a.out  capacity_size.cpp  ex9_04book.cpp  ex9_13.cpp  ex9_13.cpp.autosave  ex9_14.cpp  ex9_15.cpp  ex9_20.cpp  ex9_24.cpp  test.cpp.autosave  vec_init.cpp
c++/c++primer/10/: a.out  (+6 more)
c++/c++primer_05/: Sales_data.h
c++/c++primer_3/: CMakeLists.txt
c++/c++primer_3/07/: 07_01.cpp  ex07_02.h  ex07_03.cpp  ex07_04.h  ex07_06.h  ex07_07.cpp  ex07_09.h  ex07_11.cpp  ex07_11.h  ex07_12.h  ex07_13.cpp  ex07_15.h  ex07_21.h  ex07_22.h  ex07_23.h  ex07_24.h  ex07_26.h  ex07_27.cpp  ex07_27.h  ex07_32.h  ex07_41.cpp  ex07_41.h  ex07_53.h  test.cpp
c++/c++primer_3/08/: book.txt  ex08_01.cpp  ex08_04.cpp  ex08_05.cpp
c++/c++primer_3/10/: ex10_01.cpp  ex10_02.cpp  ex10_03.cpp  ex10_04.cpp  ex10_06.cpp  ex10_09.cpp  ex10_11.cpp  ex10_13.cpp  ex10_16.cpp  ex10_18.cpp  ex10_19.cpp  ex10_20.cpp
c++/c++primer_3/11/: ex11_03.cpp  ex11_04.cpp  ex11_07.cpp  ex11_08.cpp  ex11_09_10.cpp  ex11_12.cpp  ex11_13.cpp  ex11_14.cpp  ex11_14_other.cpp  ex11_20.cpp  ex11_23.cpp  ex11_31.cpp  ex11_32.cpp  ex11_33.cpp
c++/c++primer_3/12/: ex12_01.cpp  ex12_02.h  ex12_04.txt  ex12_06.cpp  ex12_07.cpp  ex12_08.txt  ex12_09.txt  ex12_10.cpp  ex12_11.cpp  ex12_12.txt  ex12_13.cpp  ex12_14.cpp  ex12_16.cpp  ex12_23.cpp  ex12_27.cpp  ex12_27.h  strblob.h  test12_02.cpp
c++/c++primer_3/13/: ex13_08.h  ex13_13_30.h  ex13_14.cpp  ex13_15.cpp  ex13_16.cpp  ex13_18.h  ex13_19.h  ex13_22.h  ex13_26.h  ex13_27.h  ex13_28.h  ex13_30.h  ex13_31.cpp  ex13_31.h  ex13_34.cpp  ex13_34.h
c++/c++primer_3/14/: ex14_02.cpp  ex14_02.h  ex14_07.cpp  ex14_07.h  ex14_13.cpp  ex14_13.h  ex14_15.cpp  ex14_15.h  test_02.cpp  test_13.cpp  test_15.cpp
c++/c++primer_3/15/: bulk_quote.cpp  bulk_quote.h  disc_quote.cpp  disc_quote.h  ex15_03.cpp  ex15_03.h  ex15_05.cpp  ex15_05.h  ex15_07.cpp  ex15_07.h  ex15_09.cpp  ex15_20.cpp  limit_quote.cpp  limit_quote.h  quote.cpp  quote.h  test_07.cpp  test_11.cpp  test_15.cpp
c++/c++primer_3/16/: blob.cpp  blob1.cpp  ex16_02.cpp  ex16_04.cpp  ex16_05.cpp  ex16_07.cpp  template_blob.cpp  test.cpp
cmake/cmake_practice/test1/: CMakeLists.txt  main.cpp
common_website/: qt_website.txt  website.txt
design_mode/singleton/: simple.cpp  template_lazy.cpp
mengbo/mqtt_test/: a.out  mqtt_client.cpp  mqtt_test.pro  simple_mqtt.cpp
myjob/: a.out  arr.cpp  bianliang.cpp  caps_look.cpp  class_object.cpp  class_object2.cpp  copt_constructor_test1.cpp  data_type.cpp  data_type1.cpp  data_type2.cpp  data_type_test2.cpp  gets_puts_use.cpp  my_strcmp.cpp  myjob.pro  test1.cpp  test2.cpp  test3.cpp  test4.cpp  zizeng.cpp
nowcoder/17-08-03/: 17-8-3.pro  a.out  arrary.cpp  arrary2.cpp  arrary3.cpp  arrary4.cpp  digui.cpp  feiboqina.cpp  for.cpp  short_int.cpp  test.c
nowcoder/17-08-04/: 17-08-04.pro  a.out  main.cpp  pointer.cpp
nowcoder/17-08-06/: 17-08-06.pro  a.out  sort.cpp  sort.cpp.autosave  test.cpp
nowcoder/17-08-12/: 17-08-12.pro  a.out  char.cpp  char1.cpp  smart_pointer.cpp  test.cpp
nowcoder/17-08-14/: 17-08-14.pro  a.out  mianshi.cpp
nowcoder/18-07-31/: bit_add.cpp  two_vec_sum.cpp
projects/project/: db
projects/project/attendance_system/src/: CMakeLists.txt  main.cpp
projects/project/attendance_system/src/libs/: admin.cpp  admin.hpp  counsellor.cpp  counsellor.hpp  disk.cpp  disk.cpp.bak  disk.hpp  interface.cpp  interface.hpp  manager.cpp  manager.hpp  public.cpp  public.hpp  student.cpp  student.hpp  teacher.cpp  teacher.hpp
python/: mysqlDB.py  test.py
python/libs/: bsbs.py
python/spider/: baidu.py
python/xuef/: hello.py  input.py  print.py
shell/test/: getopts.sh  test.sh  true.sh  while.sh
test/: server.cpp  test.cpp
test/myreactor/: CMakeLists.txt  myreactor.cpp  myreactor.h
thread/test/: detach.cpp  thread.cpp
thread/thread_pool/: CMakeLists.txt  thread_pool.h
thread/thread_test/: a.out  thread_helllo.cpp  thread_test.pro
unixEnvironment/01/: 01.pro  1_03.c  1_04.c  1_05.c  1_06.c  1_07.c  1_08.c  1_09.c  1_10.c  a.out
unixEnvironment/03/: 03.pro  3_02.c  3_05.c  3_11.c  a.out  file.hole
unixEnvironment/04/: 04.pro  4_03.c  4_08.c  4_09.c  4_12.c  4_16.c  4_21.c  a.out
unixNetworkV1/01/: 01.pro  1_05.c  a.out
unixNetworkV1/03/: 03.pro  3_10.c  a.out
unixNetworkV1/04/: 04.pro
unixNetworkV2/01/: daytimeecpsrv.c  daytimetcpcli.c  daytimetcpcli.pro
unixenv_apue/v3_first/: lseek.c
web_exercise/cpp/: test.cpp
(+474 files in other folders)
